[gd_scene load_steps=7 format=2]

[ext_resource path="res://potions/earth/spikes/spikes.gd" type="Script" id=1]
[ext_resource path="res://potions/earth/spikes/spike_new.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 55.3333
height = 2.0

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.995122, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 40.0
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_random = 1.0
scale_curve = SubResource( 5 )

[node name="Spikes" type="Area2D"]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1.25, 1.25, 1.25, 1 )
position = Vector2( 0, -2.5 )
emitting = false
amount = 40
lifetime = 3.0
one_shot = true
explosiveness = 0.5
randomness = 1.0
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_shape_entered" from="." to="." method="_on_Spikes_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_Spikes_body_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_SelfDestructTimer_timeout"]
